<resources>
    <string name="app_name">Whatsapp Tools</string>

    <string name="admob_app_id">ca-app-pub-7905372582242201~6016146226</string>
<!--    <string name="admob_interstitial_id">ca-app-pub-7905372582242201/7684451112</string>-->
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
<!--    <string name="admob_banner_id">ca-app-pub-7905372582242201/8067594492</string>-->
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_images">Images</string>
    <string name="title_videos">Videos</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle"> Download WhatsApp Status </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="title_saved">Saved</string>
    <string name="status_saved_to_gallery">Status saved to gallery</string>
    <string name="support">Support</string>

    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="help_message">
        1 . Open WhatsApp \n2. View Status \n3. Open this App\n4. Download or share your status</string>
    <string name="version">Version %s</string>
    <string name="share_app_text">Hey! Checkout this amazing app which helps you to download any WhatsApp Status: %s</string>
    <string name="no_permission">No permission</string>
    <string name="require_read_write_external_storage_permissin">This app needs read/write your device storage to work . please allow this permission</string>
    <string name="allow">Allow</string>
    <string name="exit">Exit</string>
    <string name="title_activity_image_view">ImageViewActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_for_repeat">Text for Repeat</string>
    <string name="number_to_repeat_message">Number to Repeat Message</string>
    <string name="blank" >&#160;</string>

</resources>
