<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/whatasappstatus"
            android:icon="@drawable/ic_info"
            android:title="Whatsapp status" />

        <item
            android:id="@+id/direct_msg"
            android:icon="@drawable/ic_help"
            android:title="Direct message" />

    <item
        android:id="@+id/text_repeater"
        android:icon="@drawable/ic_help"
        android:title="Text Repeater" />

    
    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star"
                android:title="@string/rate" />
        </menu>
    </item>

</menu>
