<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.DirectMsgActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_banner_id">
    </com.google.android.gms.ads.AdView>
    <EditText
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_bg"
        android:hint="@string/text_for_repeat"
        android:padding="5dp"
        android:inputType="text"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:visibility="gone"
        android:text="@string/blank"
        />

    <EditText
        android:id="@+id/numbertorepeat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:hint="Enter No To Repeat"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/adView"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <TextView
        android:id="@+id/on_off"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="20dp"
        android:text="new Line: Off"
        android:textSize="18dp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@id/switch1"
        />
    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textOn="On"
        android:textOff="off"
        android:checked="false"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbertorepeat"
        android:layout_marginStart="20dp" />
    <Button
        android:id="@+id/repeat"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_bg"
        android:text="Repeat"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/switch1" />
    <TextView
        android:id="@+id/repeat_msg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/button_bg"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/repeat"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linear"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <Button
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COPY"
            android:layout_weight="1"
            android:background="#fff"

            />
        <Button
            android:id="@+id/clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CLEAN"
            android:layout_weight="1"
            android:background="#fff"
            />
        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SHARE"
            android:layout_weight="1"
            android:background="#fff"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
